Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114199

macOS: Clicking on a menu item which opens a submenu erroneously closes menu

XMLWordPrintable

    • macOS
    • c8473c090 (dev), 281e067a6 (6.6), abe37130f (6.5)

      Observed Behaviour:

      Clicking on a menu item which is associated with a submenu erroneously closes the entire menu.

      Expected Behaviour:

      Clicking on a menu item which is associated with a submenu instantly opens the submenu and then ignores any further clicks.

      Minimal Example:

      #include <QApplication>
      #include <QMainWindow>
      #include <QMenu>
      #include <QMenuBar>
      
      int main(int argc, char **argv)
      {
          QApplication application(argc, argv);
      
          QMenu testMenu(QStringLiteral("TestMenu"));
          QMenu *subMenu = testMenu.addMenu(QStringLiteral("SubMenu"));
      
          QAction *subMenuAction = subMenu->addAction(QStringLiteral("SubMenuItem"));
      
          QMainWindow mainWindow;
          mainWindow.setWindowTitle(QStringLiteral("Test Window"));
          mainWindow.menuBar()->addMenu(&testMenu);
          mainWindow.show();
      
          return application.exec();
      }
       

      Steps To Reproduce:

      • Compile minimal example on macOS
      • Run application
      • Click on menu item "TestMenu"
      • Click on menu item "SubMenu" in opened menu
      • Observe the entire menu closing

        For Gerrit Dashboard: QTBUG-114199
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            patthemav Patrick Heyer
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes